--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -6,22 +6,23 @@
 
 
 ### 📌 3.2 변수와 상수(Variable and Constants)
-- int angel = 1004;
-  > int -> 자료형  
-  > angel -> Variable(숫자를 담을 수 있는 메모리 공간)  
-  > 1004 -> `literal constant(문자 그대로 불변의 값)`
+#### literal constant, Symbolic constant
+- int angel = 1004;  
+  int -> 자료형  
+  angel -> Variable(숫자를 담을 수 있는 메모리 공간)  
+  1004 -> `literal constant(문자 그대로 불변의 값)`
 
-- const int angel = 1004;
-  > const -> Qualifier(한정자, 제한자)  
-  > int -> 자료형  
-  > angel = `Symbolic constant(기호적 상수)`  
-  > 1004 -> literal constant
+- const int angel = 1004;  
+  const -> Qualifier(한정자, 제한자)  
+  int -> 자료형  
+  angel = `Symbolic constant(기호적 상수)`  
+  1004 -> literal constant
 
 
 ### 📌 3.3 scanf()
 - `&i는 i의 메모리 주소를 알려줍니다.`  
   scanf는 해당 주소에 입력 값을 저장합니다.
-  
+
 - ⚠️ MSVC에서 보안 문제로 인해 경고를 발생시키는데, 경고를 무시하고 기존 C 표준 함수를 사용하고 싶다면, 매크로를 정의해야 함.  
   > a) #define _CRT_SECURE_NO_WARNINGS (macro)  
   > b) project - properties - preprocessor - debug & release 모두 Definition에 _CRT_SECURE_NO_WARNINGS 입력
@@ -49,7 +50,8 @@ int main()
 - https://alvinalexander.com/programming/printf-format-cheat-sheet/
 <img width="512" alt="Image" src="https://github.com/user-attachments/assets/2174bfbc-1d0b-4028-88da-39c6c5a11606" />
 
-- ⚠️ C 언어의 scanf는 포맷 문자열만 사용해야 하고, 공백 문자나 줄 바꿈 같은 건 넣으면 안 됩니다.
+#### ⚠️
+- C 언어의 scanf는 포맷 문자열만 사용해야 하고, 공백 문자나 줄 바꿈 같은 건 넣으면 안 됩니다.
 
 ``` c
 int main()
@@ -179,7 +181,8 @@ int main()
   문자를 33개 메모리에 나란히 저장할 수 있는 배열을 선언.  
   4byte * 8bit = 32bit인데 +1 해서 33을 사용하는 이유는??
 
-- Overflow : 32비트로 표현 가능한 최대값에 1을 더하면, 비트 수가 33개로 늘어나게 되지만 32비트 시스템에서는 이를 표현할 수 없으므로, `최상위 비트는 버려지고 값은 다시 0으로 돌아옵니다.` 이 현상을 `오버플로우`라고 하며, 32비트 시스템에서는 더 이상 표현할 수 없는 값을 0으로 되돌리는 결과를 초래합니다.  
+#### Overflow
+- 32비트로 표현 가능한 최대값에 1을 더하면, 비트 수가 33개로 늘어나게 되지만 32비트 시스템에서는 이를 표현할 수 없으므로, `최상위 비트는 버려지고 값은 다시 0으로 돌아옵니다.` 이 현상을 `오버플로우`라고 하며, 32비트 시스템에서는 더 이상 표현할 수 없는 값을 0으로 되돌리는 결과를 초래합니다.  
   > ex) if 4bit,  
   > 1111 + 1 = 1 0000  -->  UINT_MAX + 1 -> 0  
   > 1 0000 - 1         -->  0 -1         -> 4294967295
@@ -249,8 +252,8 @@ int main()
 
 
 ### 📌 3.9 고정 너비 정수(Fixed-width Integers) 🔥
-- 왜 필요해?  
-  `이식성`: `다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장` (멀티 플랫폼 대비)  
+#### 왜 필요해? 이식성, 일관성.
+- `이식성`: `다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장` (멀티 플랫폼 대비)  
   `일관성`: 변수의 크기가 예측 가능해서 메모리 관리가 수월함
 
 ``` c
@@ -288,7 +291,8 @@ int main()
   
 
 ### 📌 3.10 문자 
-- ASCII Chart : `문자도 숫자로 모두 바꿔서 저장하고 처리`한다.  
+#### ASCII Chart
+- `문자도 숫자로 모두 바꿔서 저장하고 처리`한다.  
   <img width="450" alt="Image" src="https://github.com/user-attachments/assets/7d5376fd-b85b-4fbf-9083-e68dbbc4de50" />  
   https://en.cppreference.com/w/cpp/language/ascii
   
