--- a/C/5.0_Operator_Expression_Statement.md
+++ b/C/5.0_Operator_Expression_Statement.md
@@ -3,17 +3,20 @@
 ``` c
 #include <stdio.h>
 
-int main()
-{
-	int n = 1;
+int main() {
+    int i = 0;
+    
+    while (1) {  // 무한 루프
+        printf("i = %d\n", i);
+        if (i == 5)
+            goto end;  // i가 5이면 end 레이블로 이동
+        
+        i++;
+    }
 
-	while (n < 3)
-	{
-		printf("%d\n", n);
-		n = n + 1;
-	}
-
-	return 0;
+end:
+    printf("반복문을 빠져나왔습니다.\n");
+    return 0;
 }
 ```
 
