--- a/C/7.0_Branching_statement.md
+++ b/C/7.0_Branching_statement.md
@@ -1,1 +1,248 @@
-### 📌 7.1 
+### 📌 7.1 분기문 if(Branching Statement)
+- 구조 : if (expression) / Statement  
+  <img width="370" alt="image" src="https://github.com/user-attachments/assets/8d9dcd48-f5ff-43cd-b449-c9b37809f4fc" />
+  <img width="430" alt="image" src="https://github.com/user-attachments/assets/8613e9f0-8a49-4cc0-90a2-256b2889543e" />
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int number;
+
+	printf("Input a positive integer : ");
+
+	//TODO : print even or odd
+	while (1 == scanf("%d", &number))
+	{
+		// 1
+		//if (0 == number % 2)
+		//	printf("even\n");
+
+		//if (0 != number % 2)
+		//	printf("odd\n");
+
+		// 2
+		if (number % 2 == 0)
+			printf("even\n");
+		else if (number % 2 != 0)
+			printf("odd\n");
+			
+	}
+
+	return 0;
+}
+```
+
+
+### 📌 7.2 표준 입출력 함수들 getchar(), putchar() 예제
+- getchar() : 한 글자 가져오기 / putchar(ch) : 한 글자 출력 / buffer(?)
+- || or, && and
+``` c
+#include <stdio.h>	// getchar(), putchar()
+
+int main()
+{
+	//1. Intoduce getchar(), putchar()
+	//2. Use while loop to process character sequences
+	//3. Filter a specific character
+	//4. Convert numbers to asterisks
+	//5. Lower characters to Upper characters
+
+
+	char ch;
+
+	//ch = getchar();
+	//putchar(ch);
+
+	//1
+	//while (ch != '\n')  // 문자열의 끝
+	//{
+	//	putchar(ch);
+	//	ch = getchar();
+	//}
+	//putchar(ch);
+
+	//2
+	while ('\n' != (ch = getchar()))
+	{
+		//if (ch == 'f')
+		//	ch = 'X';
+		//else if (ch == 'F')
+		//	ch = 'X';
+
+		if (ch == 'f' || ch == 'F')  //    || : or
+			ch = 'X';
+
+		if (ch >= '0' && ch <= '9')  //    && : and
+			ch = '*';
+
+		if (ch >= 'a' && ch <= 'z')
+			ch -= 'a' - 'A';
+		else if (ch >= 'A' && ch <= 'Z')
+			ch += 'a' - 'A';
+
+		putchar(ch);
+	}
+	
+	return 0;
+}
+```
+
+
+### 📌 7.3 ctype.h 문자 함수들 (표준 문자함수들 사용법)
+- https://www.tutorialspoint.com/c_standard_library/ctype_h.htm  
+  <img width="400" alt="image" src="https://github.com/user-attachments/assets/70177a92-6dcd-4192-9f6d-ed031002bb12" />
+``` c
+#include <stdio.h>
+#include <ctype.h>	// isalpha() and more
+
+//Reference link
+//https://www.tutorialspoint.com/c_standard_library/ctype_h.htm
+
+
+int main()
+{
+	char ch;
+
+	while ('\n' != (ch = getchar()))
+	{
+		if (islower(ch))
+			ch = toupper(ch);
+		else if (isupper(ch))
+			ch = tolower(ch);
+
+		if (isdigit(ch))
+			ch = '*';
+
+		putchar(ch);
+	}
+	
+	putchar(ch);
+
+	return 0;
+}
+```
+
+
+### 📌 7.4 다중 선택 else if
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+// assessment standard tax base
+#define BASE1  12000000.0
+#define BASE2  46000000.0
+#define BASE3  88000000.0
+#define BASE4 150000000.0
+#define BASE5 300000000.0
+#define BASE6 500000000.0
+
+#define RATE1 (6.0 / 100.0)		// percent to rate
+#define RATE2 (15.0 / 100.0)
+#define RATE3 (24.0 / 100.0)
+#define RATE4 (35.0 / 100.0)
+#define RATE5 (38.0 / 100.0)
+#define RATE6 (40.0 / 100.0)
+#define RATE7 (42.0 / 100.0)
+
+#define BASIC_DEDUCTION 1500000.0
+
+int main()
+{
+	double income = 0.0;	  // annual income
+	double tax = 0.0;
+
+	scanf("%lf", &income);
+
+	income -= BASIC_DEDUCTION;
+
+	if (income <= BASE1)
+	{
+		tax = income * RATE1;
+	}
+	else if (income <= BASE2)
+	{
+		tax = BASE1 * RATE1 + (income - BASE1) * RATE2;
+	}
+		else if (income <= BASE3)
+	{
+		tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (income - BASE2) * RATE3;
+	}
+	else if (income <= BASE4)
+	{
+		tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (BASE3 - BASE2) * RATE3 + (income - BASE3) * RATE4;
+	}
+	else if (income <= BASE5)
+	{
+		tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (BASE3 - BASE2) * RATE3 + (BASE4 - BASE3) * RATE4
+			+ (income - BASE4) * RATE5;
+	}
+	else if (income <= BASE6)
+	{
+		tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (BASE3 - BASE2) * RATE3 + (BASE4 - BASE3) * RATE4
+			+ (BASE5 - BASE4) * RATE5 + (income - BASE5) * RATE6;
+	}
+	else //if(income > BASE6)
+	{
+		tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (BASE3 - BASE2) * RATE3 + (BASE4 - BASE3) * RATE4
+			+ (BASE5 - BASE4) * RATE5 + (BASE6 - BASE5) * RATE6 + (income - BASE6) * RATE7;
+	}
+
+	printf("Tax is = %f\n", tax);
+	printf("Your income after tax deduction = %f", income - tax);
+
+	return 0;
+}
+```
+
+
+### 📌 7.5 else와 if 짝짓기
+- indenting 주의
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int number;
+	scanf("%d", &number);
+
+	//1
+	if (number == 1)
+		printf("One");
+	else if (number == 2)
+		printf("Two");
+	else if (number == 3)
+		printf("Three");
+
+	//2
+	if (number == 1)
+		printf("One");
+	else
+		if (number == 2)
+			printf("Two");
+		else 
+			if (number == 3)
+				printf("Three");  // minimum 127 levels of nestings...
+
+	//3
+	if (number > 5)
+		if (number < 10)
+			printf("Larger than 5 smaller than 10\n");
+	else
+		printf("Less than or equal to 5");  // ***** Compilers ignore indenting *****
+	                                        // 중괄호 필요.
+
+	return 0;
+}
+```
+
+
+### 📌 
+
+
+
+
+
+
+
+
