--- a/C/7.0_Branching_statement.md
+++ b/C/7.0_Branching_statement.md
@@ -237,6 +237,353 @@ int main()
 ```
 
 
+### 📌 7.6 소수 판단 예제
+``` c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main()
+{
+	unsigned num;
+
+	while (scanf("%u", &num))
+	{
+		bool isPrime = false;// flag, try bool type
+
+		for (unsigned i = 2; i < num; ++i)
+		{
+			if (0 == num % i)
+			{
+				isPrime = false;
+				break;
+			}
+			else
+				isPrime = true;
+		}
+
+		if (isPrime)
+			printf("%u is a prime number.\n", num);
+		else
+			printf("%u is not a prime number.\n", num);
+	}
+
+	return 0;
+}
+```
+
+
+### 📌 7.7 논리 연산자 Logical operators
+- if (temp == 0 && (++temp == 1024)) {  
+  논리 연산자에서, and `앞에 있는 expression이 False이면, 뒤쪽 expression은 연산하지 않는다.`  
+- if (x++ > 0 && x + y == 4) {  -> True.
+  `&& and || are sequence points`
+``` c
+#include <stdio.h>
+#include <ctype.h>		// islower()
+#include <stdbool.h>
+#include <iso646.h>		// and, or, not
+
+#define PERIOD '.'
+
+int main()
+{
+	/*
+		Logical operators
+
+		&& : and
+		|| : or
+		!  : not
+	*/
+
+	bool test1 = 3 > 2 || 5 > 6;	// true
+	bool test2 = 3 > 2 && 5 > 6;	// false
+	bool test3 = !(5 > 6);			// true, equivalent to 5 <= 6
+
+	printf("%d %d %d\n", test1, test2, test3);
+
+
+	/* Character counting example */
+
+	char ch;
+	int count = 0;
+
+	while (PERIOD != (ch = getchar()))
+	{
+		//putchar(ch);
+		if (ch != '\n' && ch != ' ')
+			++count;
+	}
+		
+	printf("%d", count);
+
+
+	/*
+		Alternatives in iso646.h
+
+		&&	: and
+		||	: or
+		!	: not
+	*/
+
+	bool test1 = 3 > 2 or 5 > 6;	// true
+	bool test2 = 3 > 2 and 5 > 6;	// false
+	bool test3 = not(5 > 6);			// true, equivalent to 5 <= 6
+	printf("%d %d %d\n", test1, test2, test3);
+
+
+	/*
+		Precedence
+
+		Check !, &&, !! in the operator precedence table
+		https://en.cppreference.com/w/c/language/operator_precedence
+	*/
+
+	bool wh = !(1 > 2);
+	printf("%d, %d", wh, wh + 1);
+
+	int a = 1, b = 2, c = 3, d = 4;
+
+	a > b && b > c || b > d;
+	((a > b) && (b > c)) || (b > d);
+
+
+	/*
+		Short-circuit Evaluation
+
+		- Logical expressions are evaluated from left to right
+		- && and || are sequence points
+	*/
+
+	int temp = (1 + 2) * (3 + 4);
+
+	printf("Before : %d\n", temp);
+
+	// ***** 논리 연산자에서, and 앞에 있는 expression이 False이면, *****
+	// ***** 뒤쪽 expression은 연산하지 않는다. *****
+	if (temp == 0 && (++temp == 1024)) {
+		// do nothing
+	};
+
+	printf("After : %d\n", temp);
+
+
+	//sequence points
+	int x = 1, y = 2;
+	if (x++ > 0 && x + y == 4)
+		printf("%d %d\n", x, y);
+
+
+	/* Ranges */
+
+	for (int i = 0; i < 100; ++i)
+		if (i >= 10 && i <= 20)
+			printf("%d ", i);
+
+	printf("\n");
+
+	for (int i = 0; i < 100; ++i)
+		if (10 <= i <= 20)		//Note: if((10 <= i ) <= 20)
+			printf("%d ", i);
+
+	for (char c = -128; c < 127; ++c)
+		if (c >= 'a' && c <= 'z')
+			printf("%c ", c);
+
+	printf("\n");
+
+	for (char c = 0; c < 127; ++c)
+		if (islower(c))
+			printf("%c ", c);
+
+	return 0;
+}
+```
+
+
+### 📌 7.8 단어 세기 예제
+``` c
+#include <stdio.h>
+
+int main()
+{
+	char ch;
+	unsigned x1 = 0, x2 = 0, x3 = 0;
+
+	printf("Enter text :\n");
+
+	while ('\n' != (ch = getchar()))
+	{
+		if (ch == ' ')
+			++x2;
+		else if (ch == '.')
+		{
+			++x2;
+			++x3;
+			break;
+		}
+		else
+			++x1;
+	}
+
+	printf("Characters = %d, Words = %d, Lines = %d", x1, x2, x3);
+
+	return 0;
+}
+```
+
+
+### 📌 7.9 조건 연산자
+- ternary operator( ? : )
+``` c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main()
+{
+	//int temp;
+	//// temp = true ? 1024 : 7;
+	//temp = 1 ? 1024 : 7;
+	//printf("%d\n", temp);  // 1024
+
+	//temp = 0 ? 1024 : 7;
+	//printf("%d\n", temp);  // 7
+
+
+	//int a = 1, b = 2;
+	//int max = (a > b) ? a : b;
+	//printf("%d\n", max);  // 2
+
+
+	int number;
+	scanf("%d", &number);
+
+	//1
+	bool is_even;
+		
+	if (number % 2 == 0)
+		is_even = true;
+	else
+		is_even = false;
+
+	//2
+	bool is_even = (number % 2 == 0) ? true : false;
+		
+	//3	
+	(number % 2 == 0) ? printf("Even") : printf("Odd");	
+
+	return 0;
+}
+```
+
+
+### 📌 7.10 루프 도우미 continue와 break
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/* continue */
+	for (int i = 0; i < 10; ++i)
+	{
+		//1
+		if (i == 5)
+			continue;
+		printf("%d ", i);
+
+		//2
+		if (i != 5)
+			printf("%d ", i);
+	}
+
+
+	/* break */
+	for (int i = 0; i < 10; ++i)
+	{
+		if (i == 5)
+			break;
+
+		printf("%d ", i);
+	}
+
+
+	/* while and continue */
+	int count = 0;
+	while (count < 5)
+	{
+		int c = getchar();
+		if (c == 'a')
+			continue;
+		putchar(c);
+		count++;
+	}
+
+
+	/* for and continue */
+	for (int count = 0; count < 10; ++count)
+	{
+		int c = getchar();
+		if (c == 'a')
+			continue;
+		putchar(c);
+	}
+
+
+	/* continue as a placeholder */
+	while (getchar() != '\n')
+		continue;  // 여기에 뭔가 들어갈 수 있다 = placeholder
+
+
+	/* Need to use continue ? */
+	char c;
+	while ((c = getchar()) != '\n')
+	{
+		if (c == 'a')
+			continue;
+		putchar(c);
+
+		//if (c != 'a')
+		//	putchar(c);
+	}
+
+
+	/* break */
+	//1
+	char c;
+	while ((c = getchar()) != '.')
+	{
+		putchar(c);
+	}
+
+	//2
+	while (1)
+	{
+		char c = getchar();
+
+		if (c == '.')
+			break;
+
+		putchar(c);
+	}
+
+	//3
+	for (int i = 0; i < 10; i++)
+	{
+		for (int j = 0; j < 10; j++)
+		{
+			if (j == 5)
+				break;
+
+			printf("(%d %d)", i, j);
+		}
+
+		printf("\n");
+	}
+
+	return 0;
+}
+```
+
+
 ### 📌 
 
 
