--- a/C/7.0_Branching_statement.md
+++ b/C/7.0_Branching_statement.md
@@ -584,11 +584,101 @@ int main()
 ```
 
 
-### 📌 
+### 📌 7.11 최대, 최소, 평균 구하기 예제
+``` c
+#include <stdio.h>
+#include <limits.h>
+
+int main()
+{
+	int x = 0;
+	int xbool = 0;
+	int min_val = INT_MAX;
+	int max_val = INT_MIN;
+	int total_val = 0;
+	int count = 0;
+	float AVE = 0.0f;
+
+	while (1)
+	{
+		xbool = scanf("%d", &x);
+
+		if (0 == xbool)
+			break;
+
+		if (x < 0 || x > 100)
+			continue;
+
+		//if (x <= min_val)
+		//	min_val = x;
+		min_val = (x <= min_val) ? x : min_val;
+
+		//if (x >= max_val)
+		//	max_val = x;
+		max_val = (x >= max_val) ? x : max_val;
+
+		total_val += x;
+		++count;
+	}
+	//printf("%d %d", total_val, count);
+	//printf("%f %f %f", (float)total_val, (float)count, (float)total_val / (float)count);
+	AVE = (float)total_val / (float)count;
+
+	printf("min = %d, max = %d, ave = %f", min_val, max_val, AVE);
+	
+	return 0;
+}
+```
 
 
+### 📌 7.12 다중 선택 switch와 break
+- switch, case  
+  switch 문에서 한 번 특정 case에 진입하면, break;를 만날 때까지 뒤에 있는 모든 case가 무조건 실행  
+  while (getchar() != '\n') continue;에서 나머지 글자는 전부 버퍼에서 지워버리는 것  
+  다음 입력을 받을 때 기존 입력이 남아있지 않아서 예기치 않은 동작을 방지
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int main()
+{
+	char c;
+	while ((c = getchar()) != '.')
+	{
+		printf("You love ");
+
+		switch (c)	//Note: integer types only
+		{
+		case 'a':
+		case 'A':
+			printf("apple");
+			break;
+		case 'b':
+		case 'B':
+			printf("baseball");
+			break;
+		case 'c':
+		case 'C':
+			printf("cake");
+			break;
+		default:
+			printf("nothing");
+		}
+
+		printf(".\n");
+
+		while (getchar() != '\n')
+			continue;
+	}
+
+	//TODO: upper letters ? (use tolower()?)
+
+	return 0;
+}
+```
 
 
+### 📌 7.13
 
 
 
