--- a/C/8.0_Character_Input_Output_and_input_validation.md
+++ b/C/8.0_Character_Input_Output_and_input_validation.md
@@ -1,8 +1,99 @@
 ### 📌 8.1 입출력 버퍼
-- buffer : 입출력 시 한번에 모아서 하면 효율이 좋기 때문에 사용.
+- buffer : 버퍼는 입출력을 효율적으로 처리하기 위해 데이터(문자, 숫자 등)를 임시로 저장하는 메모리 공간  
+  입출력 장치는 CPU보다 속도가 느려서, 한 글자씩 처리하면 비효율적이므로 한 번에 모아서 처리하는 방식이 일반적  
+  <img width="400" alt="image" src="https://github.com/user-attachments/assets/9b6377af-b442-49f1-abc6-731bf0698d70" />
 ``` c
+#include <stdio.h>
+#include <conio.h>
+int main()
+{
+	char c;
 
+	// buffer !
+	while ((c = getchar()) != '.')
+		putchar(c);
+
+	// no buffer !
+	while ((c = _getche()) != '.')  // e : echo
+		putchar(c);
+
+	while ((c = _getch()) != '.')
+		putchar(c);
+
+	return 0;
+}
+```
+- 보충 설명
+``` c
+#include <stdio.h>
+
+int main() {
+    char c;
+    
+    while ((c = getchar()) != '\n') {  // 입력 버퍼에서 한 글자 가져오기
+        putchar(c);  // 출력 버퍼로 보내서 화면에 출력
+    }
+
+    return 0;
+}
+```
+- 키보드에서 입력하면 버퍼에 먼저 저장되고, Enter(개행 문자 '\n')을 눌러야 프로그램이 입력을 읽음.  
+  getchar()는 버퍼에서 한 글자씩 꺼내오는 함수이므로 while문을 돌 때마다 버퍼에서 가져오는 것.  
+  putchar()도 출력 버퍼에 저장한 후 한꺼번에 출력하는 방식이라 개행 문자('\n')가 있을 때 즉시 출력됨.  
+  <img width="400" alt="image" src="https://github.com/user-attachments/assets/7f7aca42-901d-42cf-aa08-96bd9ca485e3" />
+
+
+### 📌 8.2 파일의 끝 (End of File, EOF)
+- stream이 언제 끝나는지를 EOF로 판단.
+- ctrl+z를 버퍼에 넣어서 전송하면 EOF이 된다.
+- ctrl + c는 강제종료.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int c;
+
+	//while ((c = getchar()) != EOF)
+	//	putchar(c);
+
+	// stream
+	while (1)
+	{
+		c = getchar();
+		printf("%d\n", c);
+		if (c == EOF)
+			break;
+	}
+
+	return 0;
+}
 ```
 
 
-### 📌 8.2 
+### 📌 8.3 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
