--- a/C/8.0_Character_Input_Output_and_input_validation.md
+++ b/C/8.0_Character_Input_Output_and_input_validation.md
@@ -71,9 +71,32 @@ int main()
 ```
 
 
-### 📌 8.3 
+### 📌 8.3 입출력 방향 재지정(redirection)
+- 데이터의 흐름을 조정, 재지정 할 수 있다.  
+  cmd에서 output 확인하기 : `TBC.exe`  
+  cmd에서 output을 .txt로 저장(redirection) 하기 : TBC.exe `> output.txt`  
+  cmd에서 직접 input/output 하기 : TBC.exe (with scanf)  
+  cmd에서 .txt로 input/output : TBC.exe `< input.txt`  
+  (TBC.exe > output.txt < input.txt 도 가능)  
+  cmd에서 output을 .txt로 이어서 저장하기 : TBC.exe `>> output.txt`  
+  복사 : copy TBC.exe test.exe  
+  데이터 스트림(파이프) test : `test.exe | TBC.exe`  
+``` c
+#include <stdio.h>
 
+int main()
+{
+	// test.exe
+	printf("Programming");
 
+	// TBC.exe
+	char str[100];
+	scanf("%s", str);
+	printf("I love %s.\n", str);  // result : I love Programming
+
+	return 0;
+}
+```
 
 
 
