--- a/C/8.0_Character_Input_Output_and_input_validation.md
+++ b/C/8.0_Character_Input_Output_and_input_validation.md
@@ -99,15 +99,94 @@ int main()
 ```
 
 
+### 📌 8.4 사용자 인터페이스는 친절하게
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int count = 0;
+
+	while (1)
+	{
+		printf("Current count is %d. Continue? (y/n)\n", count);
+
+		int c = getchar();
+
+		if (c == 'n')
+			break;
+		else if (c == 'y')
+			count++;
+		else
+			printf("Please input y or n\n");
+
+		while (getchar() != '\n')
+			continue;
+	}
+
+	return 0;
+}
+```
 
 
+### 📌 8.5 숫자와 문자를 섞어서 입력받기
+- getchar()를 사용하여 첫 번째 문자만 읽고, scanf("%d %d")로 숫자를 읽는 구조.  
+  ⚠️ scanf는 공백을 무시하는 특성이 있기 때문에, 3 앞에 있는 공백은 무시되고, 4 앞의 공백은 문법적으로 필요한 공백
+``` c
+#include <stdio.h>
+
+void display(char cr, int lines, int width);
+
+int main()
+{
+	char c;
+	int rows, cols;
+
+	//// 1
+	//while (1)
+	//{
+	//	scanf("%c %d %d", &c, &rows, &cols);
+	//	while (getchar() != '\n')
+	//		continue;
+	//	display(c, rows, cols);
+	//	if (c == '\n')  // <<< problem !!!
+	//		break;
+	//}
+
+	// 2
+	printf("Input one character and two integers:\n");
+
+	while ((c = getchar()) != '\n')
+	{
+		scanf("%d %d", &rows, &cols);
+		while (getchar() != '\n')
+			continue;
+		display(c, rows, cols);
+		printf("Input another character and two integers:\n");
+		printf("Press Enter to quit.\n");
+	}
+
+	return 0;
+}
+
+void display(char cr, int lines, int width)
+{
+	for (int i = 1; i <= lines; ++i)
+	{ 
+		for (int l = 1; l <= width; ++l)
+		{
+			//printf("%c", cr);
+			putchar(cr);
+		}			
+		//printf("\n");
+		putchar('\n');
+	}
+
+}
+```
 
 
-
-
-
-
-
+### 📌 8.6 
 
 
 
