--- a/C/8.0_Character_Input_Output_and_input_validation.md
+++ b/C/8.0_Character_Input_Output_and_input_validation.md
@@ -1,5 +1,5 @@
 ### 📌 8.1 입출력 버퍼
-- buffer : 버퍼는 입출력을 효율적으로 처리하기 위해 데이터(문자, 숫자 등)를 임시로 저장하는 메모리 공간  
+- `buffer` : 버퍼는 입출력을 효율적으로 처리하기 위해 `데이터(문자, 숫자 등)를 임시로 저장하는 메모리 공간`  
   입출력 장치는 CPU보다 속도가 느려서, 한 글자씩 처리하면 비효율적이므로 한 번에 모아서 처리하는 방식이 일반적  
   <img width="400" alt="image" src="https://github.com/user-attachments/assets/9b6377af-b442-49f1-abc6-731bf0698d70" />
 ``` c
@@ -44,9 +44,9 @@ int main() {
 
 
 ### 📌 8.2 파일의 끝 (End of File, EOF)
-- stream이 언제 끝나는지를 EOF로 판단.
-- ctrl+z를 버퍼에 넣어서 전송하면 EOF이 된다.
-- ctrl + c는 강제종료.
+- stream이 언제 끝나는지를 `EOF`로 판단.
+- `ctrl + z`를 버퍼에 넣어서 전송하면 EOF이 된다.
+- `ctrl + c`는 강제종료.
 ``` c
 #include <stdio.h>
 
@@ -130,7 +130,7 @@ int main()
 
 
 ### 📌 8.5 숫자와 문자를 섞어서 입력받기
-- getchar()를 사용하여 첫 번째 문자만 읽고, scanf("%d %d")로 숫자를 읽는 구조.  
+- `getchar()를 사용하여 첫 번째 문자만 읽고`, `scanf("%d %d")로 숫자를 읽는 구조.`  
   ⚠️ scanf는 공백을 무시하는 특성이 있기 때문에, 3 앞에 있는 공백은 무시되고, 4 앞의 공백은 문법적으로 필요한 공백
 ``` c
 #include <stdio.h>
@@ -186,7 +186,101 @@ void display(char cr, int lines, int width)
 ```
 
 
-### 📌 8.6 
+### 📌 8.6 입력 확인하기
+- `변수에 조건에 맞는 input이 들어갈 수 있도록` 무한루프 함수 적용하는 아이디어.
+``` c
+#include <stdio.h>
+
+long get_long(void);
+
+int main()
+{
+	long number;
+
+	while (1)
+	{
+		printf("Please input an integer between 1 and 100.\n");
+
+		number = get_long();
+
+		if (number > 1 && number < 100)
+		{
+			printf("OK. Thank you.\n");
+			break;
+		}
+		else
+			printf("Wrong input. Please try again.\n");
+	}
+
+	printf("Your input %d is between 1 and 100. Thank you.\n", number);
+
+	return 0;
+}
+
+long get_long(void)
+{
+	printf("Please input an integer and press enter.\n");
+
+	long input;
+	char c;
+
+	while (scanf("%ld", &input) != 1)
+	{
+		printf("Your input - ");
+
+		// 개행 문자를 만날때까지 버퍼를 비우면서 putchar로 출력버퍼에 모두 털어내기.
+		while ((c = getchar()) != '\n')
+			putchar(c);// input left in buffer
+
+		printf(" - is not an integer. Please try again.\n");
+	}
+
+	printf("Your input %ld is an integer. Thank you.\n", input);
+
+	return input;
+}
+```
+
+
+### 📌 8.7 입력 스트림과 숫자
+- getchar()는 `한 번에 하나의 문자씩 처리`하기 때문에, `입력을 개별적으로 처리하고 싶을 때` 사용합니다. (버퍼에 남은 문자는 getchar()로 계속 읽을 수 있습니다.)  
+  scanf는 `입력 데이터를 형식에 맞게 처리`하고, 공백을 구분자로 처리하여 `여러 개의 값을 한 번`에 읽을 수 있게 합니다. (3.14를 %d로 받으면 '.'을 만나는 순간 '숫자 입력이 끝났구나'로 인식해서 .14가 버퍼에 남는다.)
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/*
+		Assume that your input is :
+		Hello 123 3.14
+	*/
+
+	char str[255];
+	int i, i2;
+	double d;
+
+	scanf("%s %d %lf", str, &i, &d);
+	printf("%s %d %f\n", str, i, d);  //Hello 123 3.140000
+
+	// or (see the difference)
+
+	scanf("%s %d %d", str, &i, &i2);
+	printf("%s %d %d\n", str, i, i2);  //Hello 123 3     .14????
+
+	// or (see the difference)
+
+	char c;
+	while ((c = getchar()) != '\n')
+		putchar(c);
+	//printf("%d", c);
+	printf("\n");
+}
+```
+
+
+### 📌 8.8 메뉴 만들기 예제
+
+
 
 
 
