--- a/C/8.0_Character_Input_Output_and_input_validation.md
+++ b/C/8.0_Character_Input_Output_and_input_validation.md
@@ -279,17 +279,126 @@ int main()
 
 
 ### 📌 8.8 메뉴 만들기 예제
+``` c
+#include <stdio.h>
+
+void numbering(void);
+int get_integer(void);
+
+int main()
+{
+	char c;
+	
+	while (1)
+	{
+		printf("Enter the letter of your choice:\n\
+a. avengers\tb. beep\n\
+c. count\tq. quit\n");
+
+		c = getchar();
+		while (getchar() != '\n')
+			continue;
+
+		if (c == 'a')
+			printf("Avengers assemble!");
+		else if (c == 'b')
+			printf("\a");
+		else if (c == 'c')
+			numbering();
+		else if (c == 'q')
+			break;
+	}
+
+	return 0;
+}
+
+void numbering(void)
+{
+	printf("Enter an integer:\n");
+
+	unsigned i = 0;
+	
+	while (1)
+	{
+		if (1 == scanf("%u", &i))
+		{
+			for (unsigned count = 1; count <= i; ++count)
+				printf("%d\n", count);
+			break;
+		}
+		else
+			printf("please retry\n");
+			while (getchar() != '\n')
+				continue;
+	}
+}
+
+// practice
+int get_integer(void)
+{
+	int input;
+	char c;
+
+	while (scanf("%d", &input) != 1)
+	{
+		while ((c = getchar()) != '\n')
+			putchar(c);		
+		printf("please retry.\n");
+	}
+
+	return input;
+}
+```
 
 
+### 📌 8.9 텍스트 파일 읽기
+- fopen()의 역할  
+  fopen()을 호출하면, `파일을 스트림 형태로 열어`줌  
+  (즉, 파일과 프로그램을 연결하는 '다리' 역할을 함)
+  
+- fopen()의 동작 과정  
+  → fopen("data.txt", "r") 실행  
+  → 파일 data.txt를 읽기 모드(r)로 열려고 시도  
+  → OS에게 "이 파일을 읽을 수 있도록 스트림을 만들어줘!" 라고 요청  
+  → 파일이 존재하면 `스트림을 생성`하여 `FILE * 타입으로 반환`  
+  → 파일이 없거나 접근 권한이 없으면 `NULL 반환`  
+  → fp 변수는 `파일과 프로그램을 연결하는 스트림`을 가리킴  
+  → fclose(fp)를 호출하면 파일 스트림을 닫고 자원 해제  
 
+- 왜 스트림을 쓰는지?  
+  메모리와 디스크 간의 효율적인 데이터 처리  
+  파일을 한 번에 다루는 것이 아니라, `필요할 때만 읽고 쓰기 가능`
 
+- fopen() = 파일을 읽고 쓰는 ‘문’을 여는 역할  
+  FILE * = 열린 문을 통해 파일과 데이터를 주고받는 통로(스트림)  
+  fclose() = 문을 닫아서 자원을 반환
 
+- ⚠️ fopen()을 사용할 때, 상대 경로("my_file.txt")로 파일을 열면,  
+  기본적으로 현재 실행 파일(.exe)이 위치한 폴더에서 파일을 찾음.
+``` c
+#include <stdio.h>
+#include <stdlib.h>	// exit()
+int main()
+{
+	// 파일을 찾는 기준이 되는 폴더를 확인 가능
+	printf("현재 작업 디렉토리: %s\n", _getcwd(NULL, 0));
 
+	// code
+	int c;
+	FILE* file = NULL;
+	char file_name[] = "my_file.txt";//TODO: use scanf(...)
 
+	file = fopen(file_name, "r"); // read or write
+	if (file == NULL)
+	{
+		printf("Failed to open file.\n");
+		exit(1);  // quit!
+	}
 
+	while ((c = getc(file)) != EOF)
+		putchar(c);
+	fclose(file);
 
-
-
-
-
-
+	return 0;
+}
+```
