--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -199,8 +199,13 @@ int int_max(int i, int j)
 
 
 ### 📌 9.5 지역 변수와 스택
+- Q. memory stack에 a도 있는데 int_max에서 a에 `직접 접근해서` 사용할 수 도 있지 않나요?
+  A. 그래서 `포인터`가 여기서 필요하게 됩니다.
+- 선언된 블록 안에 있는 더 작은 블록에서 호출하는 변수는 정상적으로 출력
+<img width="650" alt="image" src="https://github.com/user-attachments/assets/1afa65c1-3b6c-4a74-bbdc-deb1f6eec9a8" />
 
 
+### 📌 9.6 재귀 호출
 
 
 
