--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -205,13 +205,46 @@ int int_max(int i, int j)
 <img width="650" alt="image" src="https://github.com/user-attachments/assets/1afa65c1-3b6c-4a74-bbdc-deb1f6eec9a8" />
 
 
-### 📌 9.6 재귀 호출
+### 📌 9.6 재귀 호출(recursion)
+### 📌 9.7 재귀 호출과 스택
+- 종료 조건을 함께 넣어주지 않으면 당연히 무한루프. (에러)  
+  재귀함수로 들어가면 지역 변수이므로 역시 address가 다르다.  
+  → 이해가 안되면 debugger 찍어보는 습관 !
+
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/6b43d103-057f-4ed4-b606-28db548314dd" />
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/79830d4c-9e30-401d-ae4e-94f26ac1c714" />
+
+- n=1에서와 n=2에서, 변수 이름만 같지 주소는 다르다.
+
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/b9aeb5d7-26a8-4d03-83a8-90b941fcf18b" />
+
+``` c
+#include <stdio.h>
+
+void my_func(int);
+
+int main()
+{
+	my_func(1);
+
+	return 0;
+}
+
+void my_func(int n)
+{
+	// printf("Level %d, address of variable n = %p\n", n, &n);
+	printf("Level %d, address of variable n = %ㅇ\n", n, (int)& n);
+
+	if (n < 4)
+		my_func(n + 1);
+
+	//printf("Level %d, address of variable n = %p\n", n, &n);
+	printf("Level %d, address of variable n = %ㅇ\n", n, (int)&n);
+}
+```
 
 
-
-
-
-
+### 📌 9.8 팩토리얼 예제
 
 
 
