--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -23,8 +23,8 @@
 #include "8.h"
 
 #define WIDTH	25
-#define NAME	"Jeong-Mo Hong"
-#define ADDRESS "Seoul, Korea"
+#define NAME	"Young Chan Choi"
+#define ADDRESS "Suwon, Korea"
 
 void print_multiple_chars(char c, int n_stars, bool print_newline);
 void print_centered_str(char str[]);
