--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -245,6 +245,121 @@ void my_func(int n)
 
 
 ### 📌 9.8 팩토리얼 예제
+- tail(end) recursion : return 뒤에서 재귀함수 호출
+
+<img width="150" alt="image" src="https://github.com/user-attachments/assets/11edfa7a-f929-49b8-9dc2-68cef52e4871" />
+
+``` c
+#include <stdio.h>
+
+long loop_factorial(int n);
+long recursive_factorial(int n);
+
+int main()
+{
+	for (int num = 0; num <= 5; ++num)
+	{
+		printf("loop_factorial : %d\n", loop_factorial(num));
+		printf("recursive_factorial : %d\n", recursive_factorial(num));
+	}
+
+	return 0;
+}
+
+long loop_factorial(int n)
+{
+	long rst;
+
+	for (rst = 1; n > 0; --n)
+	{
+		rst *= n;
+		//printf("%d %ld\n", n, rst);
+	}
+
+	return rst;
+}
+
+long recursive_factorial(int n)
+{
+	//printf("num : %d\n", n);
+
+	if (n > 0)
+		return n * recursive_factorial(n - 1);
+	else
+		return 1;
+}
+```
+
+
+### 📌 9.9 이진수 변환 예제
+
+<img width="50" alt="image" src="https://github.com/user-attachments/assets/6f1772e0-132d-41f8-8e44-49b86ebc9127" />
+
+``` c
+#include <stdio.h>
+
+//int main()
+//{
+//	int a = 1;
+//	//printf("%d", a % 2);
+//	printf("%d", a / 2);
+//	//printf("%f", (float)a / 2);
+//
+//	return 0;
+//}
+
+void print_binary(unsigned long n);
+void print_binary_loop(unsigned long n);
+
+int main()
+{
+	for (unsigned long num = 10; num > 0; --num)
+	{
+		printf("num : %lu\n", num);
+		print_binary(num);
+		printf("\n");
+		print_binary_loop(num);
+		printf("\n");
+		printf("\n");
+	}
+	
+	return 0;
+
+}
+void print_binary(unsigned long n)
+{
+	if ((n / 2) > 0)
+		print_binary(n / 2);
+	//putchar('0' + (n % 2));
+	printf("%d", n % 2);
+}
+
+void print_binary_loop(unsigned long n)
+{
+	while (1)
+	{
+		printf("%d", n % 2);
+		n = n / 2;
+		if (n == 0)
+			break;
+	}
+
+	return;
+}
+```
+
+
+### 📌 9.10 
+
+
+
+
+
+
+
+
+
+
 
 
 
