--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -349,11 +349,53 @@ void print_binary_loop(unsigned long n)
 ```
 
 
-### 📌 9.10 
+### 📌 9.10 피보나치 예제와 재귀 호출의 장단점
+- recursion은 수학적으로 정의가 되어있을 때 코드의 가독성을 높힐 수 있지만,  
+  overhead(or stack overflow)가 발생할 수 있으며 성능에 영향을 줄 수 있음.  
+  성능 최적화가 필요하다면 iteration을 고려하거나, Tail optimization 등을 사용하여 개선이 필요.
+``` c
+#include <stdio.h>
+
+// 1, 1, 2, 3, 5, 8, 13, 21, ...
+int fibonacci(int number);
+
+int main()
+{
+	//// 1 : loop
+	//int a = 1;
+	//int b = 1;
+	//int c = 0;
+	//for (int count = 1; count < 9; ++count)
+	//{
+	//	if (count < 3)
+	//		c = 1;
+	//	else if (count >= 3)
+	//	{
+	//		c = a + b;
+	//		a = b;
+	//		b = c;
+	//	}
+	//	printf("%d ", c);
+	//}
+		
+	// 2
+	for (int c = 1; c < 9; ++c)
+		printf("%d ", fibonacci(c));
+
+	return 0;
+}
+
+int fibonacci(int number)
+{
+	if (number > 2)
+		return fibonacci(number - 1) + fibonacci(number - 2); 
+	else
+		return 1;
+}
+```
 
 
-
-
+### 📌 9.11 
 
 
 
