--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -350,9 +350,9 @@ void print_binary_loop(unsigned long n)
 
 
 ### 📌 9.10 피보나치 예제와 재귀 호출의 장단점
-- recursion은 수학적으로 정의가 되어있을 때 코드의 가독성을 높힐 수 있지만,  
-  overhead(or stack overflow)가 발생할 수 있으며 성능에 영향을 줄 수 있음.  
-  성능 최적화가 필요하다면 iteration을 고려하거나, Tail optimization 등을 사용하여 개선이 필요.
+- recursion은 `수학적으로 정의가 되어있을 때 코드의 가독성을 높힐 수 있`지만,  
+  `overhead`(or stack overflow)가 발생할 수 있으며 성능에 영향을 줄 수 있음.  
+  `성능 최적화가 필요`하다면 iteration을 고려하거나, Tail optimization 등을 사용하여 개선이 필요.
 ``` c
 #include <stdio.h>
 
