--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -395,11 +395,23 @@ int fibonacci(int number)
 ```
 
 
-### 📌 9.11 
+### 📌 9.11 헤더 파일 만드는 방법
+- ⚠️ Visual Studio에서 하나의 솔루션(Solution) 안에 여러 개의 프로젝트(Project) 가 있을 때,  
+  다른 프로젝트가 활성화되어 있어서 실행하려는 프로젝트가 제대로 빌드되지 않는 경우 에러.  
+  Set as Startup Project 세팅 필요.
+  
+- #include "my_print_functions.h"는 단순히 함수의 프로토타입을 제공하는 역할  
+  print_hello();가 실제로 어느 .c 파일에 구현되어 있는지는 main.c는 모름  
+  컴파일러는 단순히 "이 함수가 있다고 가정"하고 main.o를 생성
+  🔥링커는 모든 .o 파일을 `통합`하면서 각 심볼(변수나 함수의 이름)을 확인 및 연결
+  
+- 헤더 파일(.h)에는 함수의 프로토타입(목차)만 넣고,  
+  소스 파일(.c)**에는 실제 함수의 구현을 넣고,  
+  main() 함수는 main.c에 넣고,  
+  코드를 분리하는 이유는 사람이 보기 편하고 관리하기 용이하게 만들기 위함  
 
 
-
-
+### 📌 9.12 
 
 
 
