--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -411,7 +411,30 @@ int fibonacci(int number)
   코드를 분리하는 이유는 사람이 보기 편하고 관리하기 용이하게 만들기 위함  
 
 
-### 📌 9.12 
+### 📌 9.12 포인터의 작동 원리
+- 함수의 매개변수, 배열을 포인터로 접근, 동적할당 등 에서 사용.
+
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/b72e5d51-9872-486b-b38f-86f6bb9a3c13" />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
