--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -414,11 +414,13 @@ int fibonacci(int number)
 ### 📌 9.12 포인터의 작동 원리
 - 함수의 매개변수, 배열을 포인터로 접근, 동적할당 등 에서 사용.
 
-<img width="450" alt="image" src="https://github.com/user-attachments/assets/b72e5d51-9872-486b-b38f-86f6bb9a3c13" />
+<img width="550" alt="image" src="https://github.com/user-attachments/assets/b72e5d51-9872-486b-b38f-86f6bb9a3c13" />
+
+<img width="550" alt="image" src="https://github.com/user-attachments/assets/9269aaac-7ab6-4417-9515-9e92771022db" />
 
 
-
-
+### 📌 9.13 포인터의 기본적인 사용 방법
+- 
 
 
 
