--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -420,9 +420,54 @@ int fibonacci(int number)
 
 
 ### 📌 9.13 포인터의 기본적인 사용 방법
-- 
+<img width="250" alt="image" src="https://github.com/user-attachments/assets/e9a6f719-9dac-4205-b4eb-135dcfec9259" />
+
+- %p format specifier로 출력    
+  동일한 빌드를 run해도 주소 값은 매번 다를 수 있다.
+  
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int a, b;
+
+	a = 123;
+
+	int *a_ptr;  // * : asterisk
+
+	a_ptr = &a;  // & : address-of operator
+	printf("%d %d %p\n", a, *a_ptr, a_ptr);  // 123 123 00FEFB44
+
+	*a_ptr = 456;  // * : re-direction or de-referencing
+	printf("%d %d %p\n", a, *a_ptr, a_ptr);  // 456 456 00FEFB44
 
 
+	//b = a_ptr;  // 주소 값을 int로 casting,,인데 실수일 가능성이 높음.
+	b = *a_ptr;
+
+	printf("%d\n", b);  // 456
+
+
+	*a_ptr = 789;
+
+	printf("%d\n", b);  // 456
+	printf("%d %d %p %p\n", a, *a_ptr, a_ptr, &b);  // 789 789 00FEFB44 00FEFB38
+
+
+	b = 12;
+
+	printf("%d\n", b);  // 12
+	printf("%d %d %p\n", a, *a_ptr, a_ptr);  // 789 789 00FEFB44
+
+
+	a = 1004;
+	printf("%d %d %p %d\n", a, *a_ptr, a_ptr, b);  // 1004 1004 00FEFB44 12
+}
+```
+
+
+### 📌 
 
 
 
