--- a/C/9.0_function.md
+++ b/C/9.0_function.md
@@ -468,27 +468,98 @@ int main()
 
 
 ### 📌 9.14 포인터와 코딩 스타일
-- 
+- int* ptr1, ptr2; → 여기서 ptr1은 포인터지만, ptr2는 그냥 int 변수  
+  int *ptr1, *ptr2; 가 맞음
+- C 스타일 → int *ptr;  
+  C++ 스타일 → int* ptr;
 
 
+### 📌 9.15 NULL 포인터와 런타임 에러
+- runtime error방지를 위해 NULL 포인터를 어떻게 사용하는지.
+  NULL값을 대입하는 이유는 `해당 포인터 변수를 사용해도 되는지 안되는지 확인`하기 위해서.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	//int a = 1234;
+	//printf("%p\n", &a);
+	//printf("%d\n", a);
+
+	//int *ptr = 1234;
+	//printf("%p\n", ptr);
+	//printf("%d\n", *ptr);
+
+	int* safer_ptr = NULL;
+
+	int a = 123;
+
+	safer_ptr = &a;
+
+	int b;
+	scanf("%d", &b);
+
+	if (b % 2 == 0)
+		safer_ptr = &a;
+
+	if (safer_ptr != NULL)
+		printf("%p\n", safer_ptr);
+
+	if (safer_ptr != NULL)
+		printf("%d\n", *safer_ptr);
+
+	return 0;
+}
+```
 
 
+### 📌 9.16 디버거로 메모리 들여다보기
+
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/f832d4c1-c382-4461-86c4-bc19c5d28036" />
 
 
+### 📌 9.17 포인터 변수의 크기
+- 포인터의 sizeof() : x86 4byte, x64 8byte.
+
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/114de810-cc71-408d-8fe4-3bdb2dc7ed0a" />
 
 
+### 📌 9.18 포인터형 매개변수
+- `Call by Value`란?  
+  함수 호출(Call) 시 값(Value) 을 복사해서 전달하는 방식  
+  `원본 변수가 아닌 복사본을 함수에 넘겨주기 때문`에, 함수 내부에서 값을 바꿔도 원본에는 영향을 주지 않음  
+  <img width="300" alt="image" src="https://github.com/user-attachments/assets/6b3b3ccf-2021-4a66-8a41-66813344aa09" />
 
+- `Call by Pointer`란?  (Call by Reference, 주소에 의한 호출)
+  변수의 주소를 전달하여 원본 데이터를 직접 변경 /   포인터를 사용하여 원본 값을 수정 가능  
+  배열, 구조체 같은 큰 데이터를 다룰 때 많이 사용 (복사 비용 절약)  
+``` c
+#include <stdio.h>
 
+void swap(int* a_ptr, int* b_ptr);
 
+int main()
+{
+	int a = 123;
+	int b = 456;
 
+	printf("%p %p\n", &a, &b);
 
+	swap(&a, &b);
 
+	printf("%d %d\n", a, b);
 
+	return 0;
+}
 
+void swap(int* a_ptr, int* b_ptr)
+{
+	printf("%p %p\n", a_ptr, b_ptr);      // <<= 포인터가 담고있는 주소
+	//printf("%p %p\n", &a_ptr, &b_ptr);  // <<- '포인터가 담고있는 주소'를 담고 있는 주소
 
-
-
-
-
-
-
+	int trsf = 0;
+	trsf = *b_ptr;
+	*b_ptr = *a_ptr;
+	*a_ptr = trsf;
+}
+```
